--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "tutorial on youtube",
   "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.15.4"
   },
